use plugin instead of manual configuration