@@ -7,18 +7,7 @@ version '1.0-SNAPSHOT'
 
 dependencies {
     dynamicImplementation project(':example:service')
-//    dynamicImplementation "org.apache.commons:commons-lang3:3.1"
     testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-compileJava {
-    options.compilerArgs.addAll(
-            "--module-path", classpath.asPath,
-//            "--add-opens", "java.base=pl.mendroch.modularization.example.main",
-//            "--add-opens", "java.base/jdk.internal.loader=pl.mendroch.modularization.example.main",
-//            "--add-exports", "java.base=pl.mendroch.modularization.example.main",
-//            "--add-exports", "java.base/jdk.internal.loader=pl.mendroch.modularization.example.main"
-    )
 }
 
 jar {
